# xsdata

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  benchmark.py  foo.py  foobar.py  mkdocs.yml  pyproject.toml  script.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: publish.yml  tests.yml
docs/: Makefile  about.rst  api.rst  architecture.rst  codegen.rst  conf.py  conftest.py  data-types-table.rst  data-types.rst  data_types.rst  data_types_table.rst  dataclasses.rst  demos.rst  examples.rst  faq.md  faq.rst  formats.rst  generate_defxml.py  hooks.py  index.md  index.rst  installation.md  installation.rst  json.rst  models.rst  name_cases_table.rst  plantuml.rst  robots.txt  samples.md  tests.rst  wsdl.rst  xml.rst
docs/_ext/: xsdatadocs.py
docs/_static/: config.sample.xml
docs/_templates/: dataclass.rst
docs/api/: binding.rst  codegen.rst  generics.rst  parsing.rst  serializing.rst  utils.rst  xml-context.rst  xml-datatypes.rst  xml-handlers.rst  xml-nodes.rst  xml-writers.rst
docs/codegen/: architecture.md  config.md  docstrings.md  download_schemas.md  dtd_modeling.md  intro.md  samples_modeling.md  wsdl_modeling.md
docs/data_binding/: basics.md  dict_decoding.md  dict_encoding.md  json_parsing.md  json_serializing.md  pycode_serializing.md  tree_serializing.md  xml_parsing.md  xml_serializing.md
docs/defxmlschema/: chapter01.rst  chapter02.rst  chapter03.rst  chapter04.rst  chapter05.rst  chapter06.rst  chapter07.rst  chapter08.rst  chapter10.rst  chapter11.rst  chapter12.rst  chapter13.rst  chapter15.rst  chapter16.rst  chapter17.rst  chapter18.rst  chapter21.rst  chapter22.rst
docs/demo/: config.yml  demo-magic.sh  demo.py  demo.sh
docs/examples/: __init__.py  basic_model.py  common.py  compound-fields.rst  config.sample.xml  converter.py  custom-class-factory.rst  custom-property-names.rst  custom-type-mapping.rst  dataclasses-features.rst  defxmlschema.rst  docstrings.rst  dtd-modeling.rst  extending-models.rst  json-modeling.rst  json_parser_from_bytes.py  json_parser_from_path.py  json_parser_from_string.py  json_parser_unknown_target.py  json_serializer_basic.py  json_serializer_custom_encoder.py  json_serializer_custom_factory.py  primer.pu  primer.py  primer.pyxb.py  primer.xml  primer.xsd  pycode-serializer.rst  samples.rst  w3c-suite.rst  working-with-wildcards.rst  wrapped-list.rst  xml-modeling.rst  xml_context.py  xml_parser.py  xml_parser_alternative_handler.py  xml_parser_config.py  xml_parser_from_bytes.py  xml_parser_from_path.py  xml_parser_from_string.py  (+8 more)
docs/faq/: error-parsing-dtd.rst  how-can-i-compare-output-results-between-versions.rst  how-to-work-with-wildcard-fields.rst  why-are-elements-out-of-order.rst  why-i-get-a-typeerror-requires-a-single-type.rst  why-non-nullable-fields-are-marked-as-optional.rst
docs/formats/: dataclass.rst  plantuml.rst
docs/models/: classes.md  fields.md  types.md
docs/overrides/: main.html
docs/plugins/: how_to.md  list.md
docs/reference/: modules.rst  xsdata.analyzer.rst  xsdata.builder.rst  xsdata.cli.rst  xsdata.exceptions.rst  xsdata.formats.converters.rst  xsdata.formats.dataclass.filters.rst  xsdata.formats.dataclass.generator.rst  xsdata.formats.dataclass.mixins.rst  xsdata.formats.dataclass.models.rst  xsdata.formats.dataclass.parsers.json.rst  xsdata.formats.dataclass.parsers.rst  xsdata.formats.dataclass.parsers.xml.rst  xsdata.formats.dataclass.rst  xsdata.formats.dataclass.serializers.json.rst  xsdata.formats.dataclass.serializers.rst  xsdata.formats.dataclass.serializers.xml.rst  xsdata.formats.dataclass.utils.rst  xsdata.formats.generators.rst  xsdata.formats.mixins.rst  xsdata.formats.plantuml.generator.rst  xsdata.formats.plantuml.rst  xsdata.formats.rst  xsdata.generators.rst  xsdata.logger.rst  xsdata.models.codegen.rst  xsdata.models.elements.rst  xsdata.models.enums.rst  xsdata.models.mixins.rst  xsdata.models.rst  xsdata.parser.rst  xsdata.reducer.rst  xsdata.resolver.rst  xsdata.rst  xsdata.tool.rst  xsdata.transformer.rst  xsdata.utils.rst  xsdata.utils.text.rst  xsdata.version.rst  xsdata.writer.rst
docs/scripts/: generate_api.py  generate_data_types.py  generate_defxml.py  generate_name_cases.py
docs/tests/: binding.rst  defxmlschema.rst  generation.rst  generator.rst  w3c.rst
issue/: address.schema.json  input.xml  my_dataclass.py  xsdata_xml_parse_vs_element.py
tests/: __init__.py  conftest.py  factories.py  test_analyzer.py  test_binding.py  test_bindings.py  test_builder.py  test_cli.py  test_converters.py  test_generation.py  test_generator.py  test_generators.py  test_integration.py  test_parser.py  test_reducer.py  test_resolver.py  test_transformer.py  test_writer.py  unittest.py  utils.py
tests/codegen/: test_analyzer.py  test_builder.py  test_container.py  test_parser.py  test_resolver.py  test_sanitizer.py  test_transformer.py  test_utils.py  test_validator.py  test_writer.py
tests/defxmlschema/: generate.py  test_chapter01.py  test_chapter02.py  test_chapter03.py  test_chapter04.py  test_chapter05.py  test_chapter06.py  test_chapter07.py  test_chapter08.py  test_chapter10.py  test_chapter11.py  test_chapter12.py  test_chapter13.py  test_chapter15.py  test_chapter16.py  test_chapter17.py  test_chapter18.py  test_chapter21.py  test_chapter22.py
tests/fixtures/: __init__.py  books.py  books.xsd  datatypes.py  fix.py  models.py  submodels.py  upa_2020_response.xsd
tests/formats/: test_converter.py  test_converters.py  test_generators.py  test_inspect.py  test_mixins.py
tests/integration/: conftest.py  profile.py  test_annotations.py  test_artists.py  test_books.py  test_calculator.py  test_compound.py  test_defxmlschema.py  (+10 more)
xsdata/: __init__.py  __main__.py  analyzer.py  builder.py  builders.py  cli.py  enums.py  exceptions.py  generator.py  generators.py  logger.py  parser.py  reducer.py  resolver.py  schema.py  tool.py  transformer.py  version.py  writer.py
(+1602 files in other folders)
