[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xsdata"
description = "Python XML Binding"
authors = [{name = "Christodoulos Tsoulloftas", email = "chris@komposta.net"}]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: XML",
]
keywords = ["xsd", "wsdl", "schema", "dtd", "binding", "xml", "json", "dataclasses", "generator", "cli"]
requires-python = ">=3.8"
dependencies = [
    "typing-extensions",
]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/tefra/xsdata"
Source = "https://github.com/tefra/xsdata"
Documentation = "https://xsdata.readthedocs.io/"
Changelog = "https://xsdata.readthedocs.io/en/latest/changelog.html"

[project.optional-dependencies]
cli = [
    "click>=5.0",
    "click-default-group>=1.2",
    "docformatter>=1.7.2",
    "jinja2>=2.10",
    "toposort>=1.5",
]
docs = [
    "furo",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
]
lxml = ["lxml>=4.4.1"]
soap = ["requests"]
test = [
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
]

[project.scripts]
xsdata = "xsdata.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "xsdata.__version__"}

[tool.ruff]
target-version = "py38"

select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-annotations
    "ANN",
    # flake8-comprehensions
    "C4",
    # isort
    "I",
]

ignore = [
    "ANN101",
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN206",
    "ANN401",
    "E203",
    "B028",
    "B904",
]

isort = { known-first-party = ['xsdata', 'tests'] }

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["ANN001", "ANN002", "ANN003", "E501", "B018"]


[tool.doc8]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--color=yes --benchmark-skip"

[tool.coverage.run]
omit = [
    "xsdata/__main__.py",
    "xsdata/utils/debug.py",
]
