[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xsdata*"]

[project]
name = "xsdata"
description = "Python XML Binding"
authors = [{name = "Christodoulos Tsoulloftas", email = "chris@komposta.net"}]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: XML",
]
keywords = ["xsd", "wsdl", "schema", "dtd", "binding", "xml", "json", "dataclasses", "generator", "cli"]
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.7.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/tefra/xsdata"
Source = "https://github.com/tefra/xsdata"
Documentation = "https://xsdata.readthedocs.io/"
Changelog = "https://xsdata.readthedocs.io/en/latest/changelog/"

[project.optional-dependencies]
cli = [
    "click>=5.0",
    "click-default-group>=1.2",
    "docformatter @ git+https://github.com/tdenewiler/docformatter.git@untokenize-std-lib",
    "jinja2>=2.10",
    "toposort>=1.5",
    "ruff>=0.9.8"
]
docs = [
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-minify-plugin",
    "mkdocstrings[python]",
    "markdown-exec[ansi]",
    "pymdownx-superfence-filter-lines",
]
lxml = ["lxml>=4.5.0"]
soap = ["requests"]
test = [
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
]

[project.scripts]
xsdata = "xsdata.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "xsdata.__version__"}

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-annotations
    "ANN",
    # flake8-comprehensions
    "C4",
    # isort
    "I",
    # pydocstyle
    "D",
    # flake-raise
    "RSE",
    # flake-return
    "RET",
    # Ruff rules
    "RUF",
    # Flake Simplify
    "SIM",
]

ignore = [
    "ANN204",
    "ANN206",
    "ANN401",
    "E203",
    "B028",
    "B904",
    "D100",
    "D104",
    "RUF009",
]

exclude = ["tests/fixtures"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["ANN001", "ANN002", "ANN003", "E501", "B018", "D"]
"tests/formats/dataclass/cases/**" = ["UP"]
"**/utils/testing.py" = ["D"]
"docs/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "--color=yes --benchmark-skip"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.coverage.run]
omit = [
    "xsdata/__main__.py",
    "xsdata/utils/debug.py",
]
