[metadata]
name = xsdata
version = attr: xsdata.__version__
description = Python XML Binding
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tefra/xsdata
author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Code Generators
    Topic :: Text Processing :: Markup :: XML
keywords = xsd,wsdl,schema,binding,xml,json,dataclasses,generator,cli
project_urls =
    Source=https://github.com/tefra/xsdata
    Documentation=https://xsdata.readthedocs.io/
    Changelog=https://xsdata.readthedocs.io/en/latest/changelog.html

[options]
packages = xsdata
install_requires =
    dataclasses;python_version<"3.7"
    importlib-metadata;python_version<"3.8"
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    xsdata=xsdata.__main__:main

[options.extras_require]
cli =
    click>=5.0
    click-default-group>=1.2
    docformatter
    jinja2>=2.10
    toposort>=1.5
docs =
    furo
    sphinx
    sphinx-autobuild
    sphinx-autodoc-typehints
    sphinx-copybutton
    sphinx-inline-tabs
lxml =
    lxml>=4.4.1
soap =
    requests
test =
    codecov
    pre-commit
    pytest
    pytest-benchmark
    pytest-cov
    tox

[flake8]
exclude = tests/*
max-line-length = 88
ignore = W503,ANN101,ANN102,E203

[doc8]
max-line-length = 88

[tool:pytest]
addopts = --color=yes --benchmark-skip

[coverage:run]
omit =
    xsdata/__main__.py
    xsdata/utils/debug.py
